--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@
 #map {
     height: 830px;
     border: 2px solid;
-    border-color: saddlebrown;
+    border-color: rgb(19, 139, 93);
 }
 
 #pageTitle {
