--- a/templates/map.html
+++ b/templates/map.html
@@ -29,7 +29,7 @@
     <!--Top of page-->
    
     <div id="top"></div>
-    <a href='/' id="mapButton">Home</a>
+    <a href='/covid' id="Covid">Covid</a>
     <div id="buttons"></div>
     <!--Map div-->
     <div id="map"></div>
